[workspace]
resolver = "2"
members = ["crates/common", "crates/debug_label", "crates/react_refresh"]

[workspace.dependencies]
swc_core = "50.0.0"

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Strip debug symbols
strip = "symbols"
