[package]
authors = ["Mathis Møller"]
description = "Common code for jotai SWC plugins"
license = "MIT"
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
regex = "1.6.0"
serde = "1.0.147"
serde_json = "1.0.87"
swc_common = "0.29.13"
swc_core = { version = "0.40.36", features = ["ecma_ast"] }
