[package]
authors = ["Mathis Møller"]
description = "Common code for jotai SWC plugins"
license = "MIT"
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.1"
serde = "1.0.153"
serde_json = "1.0.94"
swc_common = "0.29.35"
swc_core = { version = "0.59.40", features = ["ecma_ast"] }
