[package]
authors = ["Mathis Møller"]
description = "Common code for jotai SWC plugins"
license = "MIT"
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.1"
serde = "1.0.155"
serde_json = "1.0.94"
swc_common = "0.29.37"
swc_core = { version = "0.69.4", features = ["ecma_ast"] }
