[package]
name = "swc_jotai_debug_label"
authors = ["Mathis Møller"]
description = "SWC plugin for automatic jotai atom debug labels"
license = "MIT"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
lazy_static = "1.4.0"
regex = "1.6.0"
swc_common = "0.29.10"
swc_core = { version = "0.40.11", features = [
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "plugin_transform",
] }

[dev-dependencies]
swc_ecma_parser = "0.122.19"
swc_ecma_transforms_base = "0.111.33"
swc_ecma_transforms_compat = "0.136.20"
swc_ecma_transforms_react = "0.155.21"
swc_ecma_transforms_testing = "0.114.19"
testing = "0.31.10"
