[package]
name = "swc_jotai_debug_label"
authors = ["Mathis Møller"]
description = "SWC plugin for automatic jotai atom debug labels"
license = "MIT"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
swc_core = { version = "0.40.36", features = [
  "ecma_ast",
  "ecma_utils",
  "ecma_visit",
  "plugin_transform", 
] }

[dev-dependencies]
swc_core = { version = "0.40.36", features = [
  "ecma_transforms_react",
  "testing_transform", 
] }
swc_ecma_parser = "0.122.23"
swc_ecma_transforms_base = "0.111.38"
swc_ecma_transforms_compat = "0.136.25"
testing = "0.31.13"
