[package]
name = "swc_jotai_debug_label"
authors = ["Mathis Møller"]
description = "SWC plugin for automatic jotai atom debug labels"
license = "MIT"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
swc_core = { version = "0.90.37", features = [
  "ecma_ast",
  "ecma_parser",
  "ecma_utils",
  "ecma_visit",
  "ecma_plugin_transform",
] }

[dev-dependencies]
swc_core = { version = "0.90.37", features = [
  "ecma_plugin_transform",
  "ecma_transforms_react",
  "testing_transform",
] }
testing = "0.33.6"
