[package]
name = "swc_jotai_react_refresh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
swc_core = { version = "0.40.11", features = [
  "ecma_ast",
  "ecma_quote",
  "ecma_utils",
  "ecma_visit",
  "plugin_transform",
] }

[dev-dependencies]
swc_ecma_parser = "0.122.19"
