[package]
name = "swc_jotai_react_refresh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
swc_core = { version = "0.40.11", features = [
  "ecma_ast",
  "ecma_quote",
  "ecma_utils",
  "ecma_visit",
  "plugin_transform",
] }

[dev-dependencies]
swc_core = { version = "0.40.11", features = [
  "ecma_transforms_react",
  "testing_transform", 
] }
swc_ecma_parser = "0.122.19"
swc_ecma_transforms_base = "0.111.33"
swc_ecma_transforms_compat = "0.136.20"
testing = "0.31.10"
