[package]
name = "swc_jotai_react_refresh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
swc_core = { version = "0.59.40", features = [
  "ecma_ast",
  "ecma_quote",
  "ecma_parser",
  "ecma_utils",
  "ecma_visit",
  "ecma_plugin_transform",
] }

[dev-dependencies]
swc_core = { version = "0.59.40", features = [
  "ecma_plugin_transform",
  "ecma_transforms_react",
  "testing_transform", 
] }
testing = "0.31.37"
